re PR c++/12924 (ICE in lookup_member, at cp/search.c:1228)

PR c++/12924
	* typeck.c (finish_class_member_access_expr): Handle TEMPLATE_ID_EXPR
	with OVERLOAD and DECL nodes as the first operand.

	* g++.dg/template/template-id-2.C: New test.

From-SVN: r73851